--- a/index.ipynb
+++ b/index.ipynb
@@ -297,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'scatter'"
+       "'bar'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,9 +317,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "type": "bar"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"7c990422-1057-4e2f-ae7c-91addb0a228f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7c990422-1057-4e2f-ae7c-91addb0a228f\", [{\"type\": \"bar\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"7c990422-1057-4e2f-ae7c-91addb0a228f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7c990422-1057-4e2f-ae7c-91addb0a228f\", [{\"type\": \"bar\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops])"
    ]
